# Keras-Progress-Messenger

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  variables.env
.github/workflows/: binary.yaml  docker_image.yaml  notifier.yaml  pipeline.yaml  test.yaml  test2.yaml
example_keras/: keras.py
src/: main.rs  webhook.rs
